Extra comments, fixed few layout issues.

--- a/public/style.css
+++ b/public/style.css
@@ -63,6 +63,13 @@ body {
     background-color: darkgray
 }
 
+.contact-section {
+    margin: 0;
+    width: 100%;
+    margin-bottom: 0px;
+    background-color: darkgray;
+}
+
 .final-section {
     margin: 0;
     width: 100%;
